--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -3,13 +3,13 @@
       <h2>We Have All The Books You Need!</h2>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../assets/background/homepage.png" style="width: 10px;" height="250px" class="d-block w-100" alt="...">
+                <img src="http://localhost:3001/images/1.jpg" style="width: 10px;" height="250px" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../assets/background/pagebackground.jpg" style="width: 10px;" height="250px" class="d-block w-100" alt="...">
+                <img src="http://localhost:3001/images/2.jpg" style="width: 10px;" height="250px" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../assets/background/thankyou.jpg" style="width: 10px;" height="250px" class="d-block w-100" alt="...">
+                <img src="http://localhost:3001/images/3.jpg" style="width: 10px;" height="250px" class="d-block w-100" alt="...">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -58,12 +58,12 @@
                 <div class="modal-footer">
                   <button
                     type="button"
-                    class="btn btn-secondary"
+                    class="btn btn-info"
                     data-dismiss="modal"
                   >
                     Close
                   </button>
-                  <button type="button" class="btn btn-primary" id="addToCart">
+                  <button type="button" class="btn btn-info" id="addToCart">
                     Add to cart
                   </button>
                 </div>
