--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -15,17 +13,15 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-
-    <title>The Book Store</title>
+    <title>The Book Around</title>
   </head>
 
   <body>
     {{!-- Container --}}
-    
       {{!-- Navbar --}}
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-4">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-info p-4">
         <a class="navbar-brand" href="/">
-        <img src="../../assets/logo/mainpagelogo.png" alt="The Book Store"style="width: 150px;" height="150px" class="img-fluid"></a>
+        <img src="http://localhost:3001/images/logo.png" alt="The Book Around"style="width: 100px;" height="100px" class="img-fluid"></a>
         </a>
         <button
           class="navbar-toggler"
@@ -41,18 +37,18 @@
         <div class="collapse navbar-collapse navigator" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/"
+              <a class="nav-link text-light" href="/"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/browse">Browse</a>
+              <a class="nav-link text-light" href="/browse">Browse</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/cart">Cart</a>
+              <a class="nav-link text-light" href="/cart">Cart</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/logout">Log out</a>
+              <a class="nav-link text-light" href="/logout">Log out</a>
             </li>
           </ul>
         </div>
@@ -65,8 +61,8 @@
     </div>  {{!-- /Container --}}
 
     <br>
-    <footer class="footer bg-dark text-light p-4" style="text-align: center; justify-content: center;">
-      The Book Store 2022 @ ALL RIGHTS RESERVED
+    <footer class="footer bg-info text-light p-4" style="text-align: center; justify-content: center;">
+      The Book Around 2022 @ ALL RIGHTS RESERVED
     </footer>
 
     <!-- jQuery -->
